--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^0.27.2",
     "core-js": "^3.24.0",
     "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
