--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
     "core-js": "^3.24.0",
+    "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
