--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
