--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
+    "js-base64": "^3.7.2",
     "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
