--- a/package.json
+++ b/package.json
@@ -1,58 +1,37 @@
 {
   "name": "random-name",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix --cache",
+    "format": "prettier --write src/"
   },
-  "main": "background.js",
   "dependencies": {
-    "@mdi/font": "5.9.55",
-    "axios": "^0.27.2",
-    "core-js": "^3.25.0",
-    "cross-env": "^7.0.3",
-    "js-base64": "^3.7.2",
+    "@fontsource/roboto": "^5.2.8",
+    "@mdi/font": "^7.4.47",
+    "js-base64": "^3.7.5",
     "lodash": "^4.17.21",
-    "register-service-worker": "^1.7.2",
-    "roboto-fontface": "*",
-    "vue": "^2.7.10",
-    "vue-router": "^3.6.4",
-    "vuetify": "^2.6.0",
-    "vuex": "^3.6.2",
-    "vuex-persist": "^3.1.3"
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.2.1",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3",
+    "vuetify": "^3.10.8"
   },
   "devDependencies": {
-    "@types/electron-devtools-installer": "^2.2.0",
-    "@types/lodash": "^4.14.184",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "electron": "^13.0.0",
-    "electron-devtools-installer": "^3.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
-    "typescript": "~4.5.5",
-    "vue-cli-plugin-electron-builder": "~2.1.1",
-    "vue-cli-plugin-vuetify": "^2.5.5",
-    "vue-template-compiler": "^2.7.10",
-    "vuetify-loader": "^1.7.0"
+    "@eslint/js": "^9.37.0",
+    "@mdi/font": "^7.4.47",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "~10.5.0",
+    "globals": "^16.4.0",
+    "prettier": "3.6.2",
+    "unplugin-fonts": "^1.4.0",
+    "vite": "^7.1.11",
+    "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
